[package]
name = "jamespy-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
#gtk = "0.18.1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
futures = "*"
url = "*"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false }
ratatui = { version = "0.24.0" }
argh = "*"
lazy_static = "*"

serde = "1.0.179"
serde_json = "1.0.105"
serde_derive = "1.0.179"
crossterm = "0.27.0"
