[package]
name = "jamespy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1" }
futures-util = { version = "0.3.29"}
futures-channel = "0.3.29"
futures = "0.3.29"
url = "2.4.1"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false } # Should pin or not use directly.
ratatui = { version = "0.24.0" }
argh = "0.1.12"
lazy_static = "1.4.0"

serde = "1.0.179"
serde_json = "1.0.105"
serde_derive = "1.0.179"
crossterm = "0.27.0"
